GearsetPOC/force-app/main/default/objects/Maintenance_Task__c/Maintenance_Task__c.object-meta.xml
<CustomObject>
    <label>Maintenance Task</label>
    <nameField>
        <label>Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>