GearsetPOC/force-app/main/default/objects/Maintenance_Task__c/fields/Asset_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Component_Type__c</fullName>
    <label>Asset/Component Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>