GearsetPOC/force-app/main/default/objects/Maintenance_Task__c/fields/Safety_Critical__c.field-meta.xml
<CustomField>
    <fullName>Safety_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Critical</label>
    <type>Checkbox</type>
</CustomField>