GearsetPOC/force-app/main/default/objects/Maintenance_Task__c/fields/Task_Time__c.field-meta.xml
<CustomField>
    <fullName>Task_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Task Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>