GearsetPOC/force-app/main/default/objects/Maintenance_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Component Based</fullName>
            </value>
            <value>
                <fullName>Asset Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>