GearsetPOC/force-app/main/default/objects/Maintenance_Task__c/fields/X373__c.field-meta.xml
<CustomField>
    <fullName>X373__c</fullName>
    <defaultValue>false</defaultValue>
    <label>373</label>
    <type>Checkbox</type>
</CustomField>