GearsetPOC/force-app/main/default/objects/Maintenance_Task__c/fields/X374__c.field-meta.xml
<CustomField>
    <fullName>X374__c</fullName>
    <defaultValue>false</defaultValue>
    <label>374</label>
    <type>Checkbox</type>
</CustomField>